--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@actions/exec": "^1.0.3",
     "@actions/github": "^2.1.1",
     "@octokit/webhooks": "^7.1.0",
-    "@types/node": "^13.9.0",
+    "@types/node": "^18.15.11",
     "@types/node-fetch": "^2.5.5",
     "@types/yaml": "^1.2.0",
     "node-fetch": "^2.6.0",
+    "typescript": "^5.0.4",
     "yaml": "^1.7.2"
   },
   "devDependencies": {
@@ -26,9 +27,7 @@
     "playground": "ncc run src/playground/index.ts"
   },
   "husky": {
-    "hooks": {
-      "pre-commit": "npm run build"
-    }
+    "hooks": {}
   },
   "repository": {
     "type": "git",
