--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "strict": true,
+    "strict": false,
     "target": "ES2015",
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
   }
 }
