--- a/package.json
+++ b/package.json
@@ -18,16 +18,22 @@
     "yaml": "^1.7.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/jira-client": "^7.1.6",
     "@types/js-yaml": "^4.0.5",
     "@zeit/ncc": "^0.21.1",
     "dotenv": "^8.2.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1"
   },
   "scripts": {
     "watch": "ncc build --watch --minify src/index.ts",
     "build": "ncc build src/index.ts",
     "run": "ncc run src/index.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "test:jira": "ts-node test/test-jira-integration.ts",
     "test:milestone": "ts-node test/test-milestone-sync.ts"
   },
